--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@ unless you know exactly what you're doing! -->
     <meta name="theme-color" content="#000000">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:300,400,500" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <title>React App</title>
+    <title>HomeBinder</title>
   </head>
   <body>
     <noscript>
